# SpiderPi-Ros2

install/: local_setup.sh  setup.sh
install/custom/lib/custom/: Spiderpi  spiderpi
install/custom/share/custom/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/py_srvcli/share/py_srvcli/: package.sh  package.xml
log/: latest_build
src/custom/: package.xml  setup.py
src/custom/custom/LAB_Tool/: ServoCmd.py  main.py
src/custom/custom/SpiderPi_PC_Software/: ServoCmd.py  Ui.py  Ui.ui  main.py  resource.qrc  resource_rc.py
src/custom/custom/hiwonder-toolbox/: hw_button_scan.py  hw_wifi.py
src/custom/custom/servo_tool/: .gitignore  BusServoCmd.py  main.py  servo_controller.py  servo_tool  ui.bk  ui.py
src/py_srvcli/: setup.py
