<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom</name>
  <version>0.0.0</version>
  <description>Bring up spider bot</description>
  <maintainer email="wsjasonteh2003@gmail.com">wshengggg</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  
      	<!--newly added-->
  <depend>example_interfaces</depend>
  <depend>std_msgs</depend> <!-- if you are using standard messages -->
  <depend>sensor_msgs</depend> <!-- if you are using sensor messages -->
  <depend>werkzeug</depend>
  <depend>jsonrpc</depend>
  <depend>pigpio</depend>
  <depend>RPi.GPIO</depend>
  
  
  <buildtool_depend>ament_cmake</buildtool_depend>   
  <buildtool_depend>ament_python</buildtool_depend>   
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
    	<!--newly added-->
  <exec_depend>python3</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
